--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h2>Revolução do Google está chegando</h2> 
         </hgroup>
 
-        <img src="_imagens/glass-oculos-preto-peq.png">
+        <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 <nav id="menu">        
     <h1>Menu Principal</h1>
-<ol type="1" start="2"   
+<ol type="1" start="2">   
 <li> <a href="index.html"> Home </a> </li>
 <li> <a href="specs.html"> Especificações </a> </li>
 <li> <a href="fotos.html"> Fotos </a> </li>
@@ -29,8 +29,8 @@
         <hgorup>
     <h3> Tecnlogia> Inovações</h3>
     <h1>tudo sobre o Google Glass</h1>
-    <h2>por Gustavo Guanabara</h2>
-    <h3> em 23/Abril/2013</h3>
+    <h2>por Brunão Santos</h2>
+    <h3> Ano 2020</h3>
         </hgorup>
 
     <h2> O que é</h2>
