--- a/fotos.html
+++ b/fotos.html
@@ -1,29 +1,68 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/specs.css">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    <title>Document</title>
+</head>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>Revolução do Google está chegando</h2>
+            </hgroup>
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+            <img id="icone" src="_imagens/fotos.png">
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ol type="1" start="2">
+                    <li> <a href="index.html"> Home </a> </li>
+                    <li> <a href="specs.html"> Especificações </a> </li>
+                    <li> <a href="fotos.html"> Fotos </a> </li>
+                    <li> <a href="multimidia.html"> Multimídia </a> </li>
+                    <li> <a href="fale-conosco.html"> Fale conosco </a> </li>
+                </ol>
+            </nav>
+        </header>
+        <section id="corpoFull">
+            <article id="noticiaPrincipal">
+                <header id="cabecalhoArtigo">
+                    <hgorup id="grupo">
+                        <h3> Glass > Especificações</h3>
+                        <h1>Raio-X no Google Glass</h1>
+                        <h2>By GB</h2>
+                        <h3 class="dir">Ano 2020</h3>
+                    </hgorup>
+                </header>
+                <p id="area">
+                    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google
+                    Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das
+                    fotos para ver uma versão ampliada e com uma breve descrição.
+                </p>
+        </section>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+       
 
-Copyright 2013 - by Gustavo Guanabara
+        - Agenda e lembretes
+        - Sergey Brin usando o Glass
+        - Leve e compacto
+        - Sensação de uma tela de 50"
+        - Vários tipos de lente
+        - Informações importantes
 
-Facebook | Twitter
+        <footer id="rodape">
+
+            <p>&copy; Copyright 2013 - by GB </br>
+                <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
+                    target="_blank"> Twitter </a> </p>
+        </footer>
+    </div>
+</body>
+
+</html>
