--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tudo Sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
     <!-- <link rel="stylesheet" type="text/css" href="/_css/teste.css">!-->
+    <link rel="stylesheet" href="./_css/fotos.css">
 
 </head>
 
@@ -35,8 +36,8 @@
                 <hgorup id="grupo">
                     <h3> Tecnlogia> Inovações</h3>
                     <h1>Saiba tudo sobre o Google Glass</h1>
-                    <h2>Por Brunão Santos</h2>
-                    <h3> Ano 2020</h3>
+                    <h2>Por GB</h2>
+                    <span>Ano 2020</span>
                 </hgorup>
             </header>
 
@@ -109,7 +110,8 @@
                     de
                     voz.</p>
               
-                    <button> [AQUI ENTRA UM VÍDEO]</button>
+                    <img class="video" src="_imagens/video-mini01.jpg" alt="" srcset=""
+                    >
 
             </article>
         </section>
@@ -117,10 +119,10 @@
 
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente</h2>
+            <img class="video" src="_imagens/video-mini02.jpg" alt="" srcset="">
+           
 
-            [AQUI ENTRA UM VÍDEO]
-
-            <h1>Novidades no Glass</h1>
+            <h2>Novidades no Glass</h2>
             <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita
                 no
                 mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das
@@ -135,11 +137,12 @@
         </aside>
         <footer id="rodape">
 
-            <p>Copyright 2013 - by Brunão Santos </br>
+            <p>Copyright 2013 - by GB </br>
                 <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
                     target="_blank"> Twitter </a> </p>
         </footer>
     </div>
 </body>
+<script src="_javascript/funcoes.js"></script>
 
 </html>
