--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,47 +1,84 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fale conosco</title>
+    <link rel="stylesheet" href="./_css/estilo.css">
+    <link rel="stylesheet" href="_css/specs.css">
+</head>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>Revolução do Google está chegando</h2>
+            </hgroup>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <img id="icone" src="_imagens/contato.png">
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ol type="1" start="2">
+                    <li> <a href="index.html"> Home </a> </li>
+                    <li> <a href="specs.html"> Especificações </a> </li>
+                    <li> <a href="fotos.html"> Fotos </a> </li>
+                    <li> <a href="multimidia.html"> Multimídia </a> </li>
+                    <li> <a href="fale-conosco.html"> Fale conosco </a> </li>
+                </ol>
+            </nav>
+        </header>
+        <section id="corpoFull">
+            <article id="noticiaPrincipal">
+                <header id="cabecalhoArtigo">
+                    <hgorup id="grupo">
+                        <h3> Tecnlogia> Inovações</h3>
+                        <h1>Saiba tudo sobre o Google Glass</h1>
+                        <h2>Por GB</h2>
+                        <span>Ano 2020</span>
+                    </hgorup>
+                    <section id="conteudo">
+                        Indentificação
+                        Nome:
+                        Senha:
+                        E-mail:
+                        Sexo:
+                        - Masculino
+                        - Feminino
+                        Data de Nascimento:
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+                        Endereço do Usuário
+                        Logradouro:
+                        Número:
+                        Estado:
+                        Cidade:
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                        Mensagem do Usuário
+                        Grau de Urgência:
+                        Mensagem:
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
-
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                        Quero um Google Glass
+                        Gostaria de adquirir um Google Glass quando disponível
+                        Cor:
+                        Quantidade:
+                        Preço Total: R$
 
 
-[BOTÃO ENVIAR]
+                        [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+                    </section>
+        </section>
+        </article>
+        </section>
+    
+        <footer id="rodape">
+            <p>&copy; Copyright 2013 - by GB </br>
+                <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
+                    target="_blank"> Twitter </a> </p>
+        </footer>
+    </div>
+
+</body>
+
+</html>
