--- a/multimidia.html
+++ b/multimidia.html
@@ -1,25 +1,61 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="en">
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/specs.css">
+    <title>Multimidia</title>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+</head>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>Revolução do Google está chegando</h2>
+            </hgroup>
 
+            <img id="icone" src="_imagens/multimidia.png">
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ol type="1" start="2">
+                    <li> <a href="index.html"> Home </a> </li>
+                    <li> <a href="specs.html"> Especificações </a> </li>
+                    <li> <a href="fotos.html"> Fotos </a> </li>
+                    <li> <a href="multimidia.html"> Multimídia </a> </li>
+                    <li> <a href="fale-conosco.html"> Fale conosco </a> </li>
+                </ol>
+            </nav>
+        </header>
+        <section id="corpoFull">
+            <article id="noticiaPrincipal">
+                <header id="cabecalhoArtigo">
+                    <hgorup id="grupo">
+                        <h3> Glass > Multimidia</h3>
+                        <h1>Raio-X no Google Glass</h1>
+                        <h2>By GB</h2>
+                        <h3 class="dir">Ano 2020</h3>
+                    </hgorup>
+                </header>
+            </article>
+            <section>
+                Áudio e Vídeo
 
-Áudio e Vídeo
+                [AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM ÁUDIO]
+s
+            </section>
+        </section>
+        <footer id="rodape">
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+            <p>&copy; Copyright 2013 - by GB </br>
+                <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
+                    target="_blank"> Twitter </a> </p>
+        </footer>
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+</body>
+
+</html>
