--- a/specs.html
+++ b/specs.html
@@ -48,7 +48,10 @@
                     ponto vermelho vai te levar a um lugar cheio de novas informações.
                 </p>
                 <section id="conteudo">
-                    <img src="_imagens/glass-esquema-marcado.jpg" alt="" srcset="">
+                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meuMapa" alt="" srcset="">
+                    <map name="meuMapa">
+                        <area shape="rect" coords="186, 220, 265, 234" href="google-glass.html#tela" alt="" target="janela">
+                    </map>
                     <iframe src="google-glass.html" name="janela" id="frameEspec" scrolling="no"></iframe>
                 </section>
             </article>        
