--- a/fotos.html
+++ b/fotos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="_css/estilo.css">
-    <link rel="stylesheet" href="_css/specs.css">
+    <link rel="stylesheet" href="_css/fotos.css">
 
     <title>Document</title>
 </head>
@@ -29,40 +29,41 @@
                     <li> <a href="fale-conosco.html"> Fale conosco </a> </li>
                 </ol>
             </nav>
-        </header>
+        </header> <!-- fim do cabeçlho, par auma questão semantica-->
         <section id="corpoFull">
             <article id="noticiaPrincipal">
                 <header id="cabecalhoArtigo">
                     <hgorup id="grupo">
-                        <h3> Glass > Especificações</h3>
-                        <h1>Raio-X no Google Glass</h1>
+                        <h3> Glass > Fotos</h3>
+                        <h1>Galeria de Imagem</h1>
                         <h2>By GB</h2>
                         <h3 class="dir">Ano 2020</h3>
                     </hgorup>
                 </header>
                 <p id="area">
-                    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google
-                    Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das
+                    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais
+                    características do Google
+                    Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse
+                    sobre uma das
                     fotos para ver uma versão ampliada e com uma breve descrição.
                 </p>
         </section>
+        <ul id="albumFotos">
+           <li id="foto1"><span>Agenda e lembretes</span></li>
+           <li id="foto2"><span>Sergey Brin usando o Glass</span></li>
+           <li id="foto3"><span>Leve e compacto</span></li>
+           <li id="foto4"><span>Sensação de uma tela de 50"</span></li>
+           <li id="foto5"><span>Vários tipos de lente</span></li>
+           <li id="foto6"><span>Informações importantes</span></li>
 
-       
-
-        - Agenda e lembretes
-        - Sergey Brin usando o Glass
-        - Leve e compacto
-        - Sensação de uma tela de 50"
-        - Vários tipos de lente
-        - Informações importantes
-
+        </ul><!-- criar uma lista não numerada-->
         <footer id="rodape">
 
-            <p>&copy; Copyright 2013 - by GB </br>
+            <p>&copy; Copyright 2013by GB </br>
                 <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
                     target="_blank"> Twitter </a> </p>
         </footer>
     </div>
 </body>
-
+<script src=""></script>
 </html>
