--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale conosco</title>
     <link rel="stylesheet" href="./_css/estilo.css">
-    <link rel="stylesheet" href="_css/specs.css">
+    <link rel="stylesheet" href="_css/form.css">
 </head>
 
 <body>
@@ -21,11 +21,11 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ol type="1" start="2">
-                    <li> <a href="index.html"> Home </a> </li>
-                    <li> <a href="specs.html"> Especificações </a> </li>
-                    <li> <a href="fotos.html"> Fotos </a> </li>
-                    <li> <a href="multimidia.html"> Multimídia </a> </li>
-                    <li> <a href="fale-conosco.html"> Fale conosco </a> </li>
+                    <li onmouseover="mudaFoto('./_imagens/home.png')" onmouseout="mudaFoto('./_imagens/_imagens/contato.png')"> <a href="index.html"> Home </a> </li>
+                    <li onmouseover="mudaFoto('./_imagens/especificacoes.png')" onmouseout="mudaFoto('./_imagens/contato.png')"> <a href="specs.html"> Especificações </a> </li>
+                    <li onmouseover="mudaFoto('./_imagens/fotos.png')" onmouseout="mudaFoto('./_imagens/contato.png')"> <a href="fotos.html"> Fotos </a> </li>
+                    <li onmouseover="mudaFoto('./_imagens/multimidia.png')" onmouseout="mudaFoto('./_imagens/contato.png')"> <a href="multimidia.html"> Multimídia </a> </li>
+                    <li onmouseover="mudaFoto('./_imagens/contato.png')" onmouseout="mudaFoto('./_imagens/contato.png')"> <a href="fale-conosco.html"> Fale conosco </a> </li>
                 </ol>
             </nav>
         </header>
@@ -39,20 +39,37 @@
                         <span>Ano 2020</span>
                     </hgorup>
                     <section id="conteudo">
-                        Indentificação
-                        Nome:
-                        Senha:
-                        E-mail:
-                        Sexo:
-                        - Masculino
-                        - Feminino
-                        Data de Nascimento:
+                        <fieldset>
+                            <legend>Indentificação</legend>
+                            <p><label for="cNome">Nome </label> <input type="text" name="tNome" id="cNome"
+                                    placeholder="Informe o nome"></p>
+                            <p><label for="cEmail">E-mail </label> <input type="email" name="tEmail" id="cEmail"
+                                    placeholder="e-mail"></p>
+                            <p> <label for="cSenha">Senha </label> <input type="password" name="tSenha" id="cSenha"
+                                    placeholder="senha" size="10" maxlength="15"></p>
+
+                            <fieldset>
+                                <legend>Sexo</legend>
+                                <input type="radio" name="radioMasc" id="mas" checked /> <label
+                                    for="mas">Masculino</label>
+                                <input type="radio" name="radioMasc" id="fem" /> <label for="fem">Feminino</label>
+                            </fieldset>
+                            <p> <label for="cData"> Data de Nascimento</label> <input type="date" name="tData"
+                                    id="cData"></p>
+                        </fieldset>
+
+                        <fieldset>
+                            <legend>Endereço</legend>
+                            <p><label for="cLogradouro"> Logradouro </label>  <input type="text" name="tlogradouro" id="cLogradouro" > </p>
+                            <p><label for="cNumero"> Numero </label> <input type="text" name="tnumero" id="cNumero" > </p>
+                            <p><label for="cEstado"> Estado </label> <input type="text" name="tEstado" id="cEstado" > </p>
+                            <p><label for="cCidade"> Cidade </label> <input type="text" name="tCidade" id="cCidade" > </p>
+                            
+                        </fieldset>
+
 
                         Endereço do Usuário
-                        Logradouro:
-                        Número:
-                        Estado:
-                        Cidade:
+
 
                         Mensagem do Usuário
                         Grau de Urgência:
@@ -71,7 +88,7 @@
         </section>
         </article>
         </section>
-    
+
         <footer id="rodape">
             <p>&copy; Copyright 2013 - by GB </br>
                 <a href="htttp:facebook.com.br" target="_blank">Facebook</a> | <a href="http:www.twiter.com.br"
@@ -80,5 +97,6 @@
     </div>
 
 </body>
+<script src="_javascript/funcoes.js"></script>
 
 </html>
