--- a/specs.html
+++ b/specs.html
@@ -50,7 +50,15 @@
                 <section id="conteudo">
                     <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meuMapa" alt="" srcset="">
                     <map name="meuMapa">
+
                         <area shape="rect" coords="186, 220, 265, 234" href="google-glass.html#tela" alt="" target="janela">
+
+                        <area shape="circle" coords="158,243,12" href="google-glass.html#camera" alt="camera" target="janela">
+
+                        <area shape="circle" coords="73,52,12" href="google-glass.html#bateria" alt="bateria" target="janela">
+
+                        <area shape="poly" coords="28,143,83,216,84,249,27,169" href="google-glass.html#sensores"  alt="sensores" target="janela">
+
                     </map>
                     <iframe src="google-glass.html" name="janela" id="frameEspec" scrolling="no"></iframe>
                 </section>
